# scout

./: .cursorignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  reset_db.sql
.github/: pull_request_template.md
.github/workflows/: checks.yml  pre-commit.yml
alembic/: env.py
alembic/versions/: 49ed2b36d60f_initial_migration.py  70ce592d9ad5_add_rating_table.py  ba7596c6e383_altered_user_to_use_email_and_not_.py  f95b55dbe61e_add_dates_to_rating_table.py
backend/: Dockerfile  main.py
backend/api/: routes.py
backend/utils/: dependencies.py  filters.py  rating_request.py
docs/: analyse_projects.md  evaluation_overview.md  generate_llm_flags.md  ingest_project_data.md
example_data/criteria/: example_2.csv  example_3.csv  gate_2.csv  gate_3.csv  gate_4.csv
example_data/example_project/: How much wood could a woodchucker chuck if a woodchuck could chuck wood.docx  Presentation_with_a n ann o ! 1 ng NA-_me.pptx  test-document-uno.docx
frontend/: Dockerfile  package-lock.json  package.json
frontend/components/: AuthError.tsx  Footer.tsx  Loader.tsx  PieChart.tsx
frontend/pages/: _app.tsx  file-viewer.tsx  index.tsx  privacy-policy.tsx  results.tsx
frontend/pages/api/: health.ts  item.ts  rate.ts  read_items_by_attribute.ts
frontend/public/styles/: App.css  (+2 more)
frontend/utils/: api.ts  getGateUrl.ts  header.ts
libreoffice_service/: Dockerfile  app.py  pyproject.toml
scout/DataIngest/: anonymizer.py  chunkers.py  file_info.py  prompts.py  s3_download.py  utils.py
scout/LLMFlag/: evaluation.py  prompts.py  retriever.py
scout/Pipelines/: generate_llm_flags.py  ingest_criteria.py  ingest_project_data.py  utils.py
scout/TopicModelling/: models.py  read_me.md  representation_prompts.py  topic_model.py  utils.py
scout/utils/: config.py  utils.py
scripts/: analyse_project.py  find_topics.py
tests/: conftest.py  test_CreateDBPipeline.py  test_LLMFlag.py  test_create_db.py  test_file_update.py  utils.py
(+16 files in other folders)
