[tool.poetry]
name = "libreoffice_service"
version = "0.1.0"
description = "A FastAPI application for PDF conversion using LibreOffice"
authors = ["i.AI <i-dot-ai-enquiries@cabinetoffice.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
python-multipart = "^0.0.5"
boto3 = "*"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"